--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Gustavo Kamitani </title>
 
     <link rel="stylesheet" href="./lib/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;600;700;800&display=swap"
@@ -44,8 +45,8 @@
     <!-- Header -->
 
     <div class="header">
-        <div class="container">
-            <div class="header-text">
+        <div class="container" data-aos-once="true" data-aos="fade-down" data-aos-offset="0" data-aos-duration="2000">
+            <div class="header-text" >
                 <h1>Develop, Design e UI / UX</h1>
                 <h4>Desenvolvedor e designer de Landing Page de alta performance.</h4>
             </div>
@@ -54,8 +55,8 @@
                 <button class="btn btn-saibaMais">Saiba mais</button>
             </div>
         </div>
-        <div class="d-none header-image d-lg-flex justify-content-center">
-            <img src="./image/header-1.png" alt="">
+        <div class="d-none header-image d-lg-flex justify-content-center" >
+            <img src="./image/header-1.png" alt="Site Landing page" data-aos-once="true" data-aos="fade-down" data-aos-offset="0" data-aos-duration="2000" data-aos-delay="250">
         </div>
     </div>
     <!-- Header -->
@@ -63,7 +64,7 @@
     <!-- Ferramentas -->
     <div class="container" id="ferramentas">
         <div class="ferramentas d-flex justify-content-center align-items-center flex-column">
-            <h2>Ferramentas</h2>
+            <h2 data-aos="fade-down" data-aos-once="true" data-aos-offset="0" data-aos-duration="2000" data-aos-delay="250">Ferramentas</h2>
             <h4>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                 laborum
                 — semper quis lectus nulla at volutpat diam ut venenatis.</h4>
@@ -71,7 +72,7 @@
             <div class="row  d-flex flex-row justify-content-center align-items-center">
                 <div
                     class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image  d-flex justify-content-center align-items-center">
+                    <div class="ferramentas-image  d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="0">
                         <svg width="84" height="84" viewBox="0 0 103 102" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path class="path1"
@@ -91,7 +92,7 @@
                 </div>
                 <div
                     class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image d-flex justify-content-center align-items-center">
+                    <div class="ferramentas-image d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="250">
                         <svg width="103" height="102" viewBox="0 0 103 102" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path class="path1"
@@ -111,7 +112,7 @@
                 </div>
                 <div
                     class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image  d-flex justify-content-center align-items-center">
+                    <div class="ferramentas-image  d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="500">
                         <svg class="bootstrap-svg" width="89" height="90" viewBox="0 0 89 90" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path class="path1"
@@ -130,7 +131,7 @@
                 </div>
                 <div
                     class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image  d-flex justify-content-center align-items-center">
+                    <div class="ferramentas-image  d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="0">
                         <svg width="103" height="102" viewBox="0 0 103 102" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <rect class="path1" x="7.94031" y="7.375" width="87.25" height="87.25" stroke="white"
@@ -152,7 +153,7 @@
                 </div>
                 <div
                     class="cards-ferramentas col-lg-12 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image d-flex justify-content-center align-items-center">
+                    <div class="ferramentas-image d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="250">
                         <svg width="52" height="78" viewBox="0 0 52 78" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path class="path1"
                                 d="M26.5653 39C26.5653 32.5107 31.826 27.25 38.3153 27.25C44.8047 27.25 50.0653 32.5107 50.0653 39C50.0653 45.4893 44.8047 50.75 38.3153 50.75C31.826 50.75 26.5653 45.4893 26.5653 39Z"
@@ -180,7 +181,7 @@
                 </div>
                 <div
                     class="cards-ferramentas col-lg-3 col-md-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image  d-flex justify-content-center align-items-center">
+                    <div class="ferramentas-image  d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="500">
                         <svg width="103" height="102" viewBox="0 0 103 102" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path class="path1"
@@ -291,7 +292,7 @@
         <div class="grid-card">
             <div class="row d-flex flex-row justify-content-center">
                 <div
-                    class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6">
+                    class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6" data-aos-once="true" data-aos="flip-left" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="0">
                     <img src="./image/perso1.png" alt="">
                     <p class="comentario-text-copy">— Open PRO lets me quickly get the insights I care about so that I
                         can focus on my
@@ -303,7 +304,7 @@
                     <p class="name">Rafaella Carmo <span>Facebook</span></p>
                 </div>
                 <div
-                    class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6">
+                    class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6" data-aos-once="true" data-aos="flip-up" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="100">
                     <img src="./image/perso1.png" alt="">
                     <p class="comentario-text-copy">— Open PRO lets me quickly get the insights I care about so that I
                         can focus on my
@@ -315,7 +316,7 @@
                     <p class="name">Rafaella Carmo <span>Instagram</span></p>
                 </div>
                 <div
-                    class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6">
+                    class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6" data-aos-once="true" data-aos="flip-right" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="0"> 
                     <img src="./image/perso2.png" alt="">
                     <p class="comentario-text-copy">— Open PRO lets me quickly get the insights I care about so that I
                         can focus on my
@@ -330,6 +331,30 @@
         </div>
 
     </div>
+
+    <div class="contato">
+        <div class="container">
+            <h2>Contato</h2>
+            <div class="contato-content">
+                <div class="row my-5">
+                    <div class="col-6">
+                        <h4>Telefone:</h4>
+                        <h5 class="mb-3">(11)98692-7887</h5>
+                        <h3>Faça um orçamento</h4>
+                        <button class="btn btn-contato"><a href="" style="color: #fff; text-decoration: none; font-weight: 600;">WhatsApp</a></button>
+                    </div>
+                    <div class="col-6 ">                       
+                        <h4>Atendimento:</h4>
+                        <h5 class="mb-5">Segunda à Sexta 9h às 18h</h5>
+                        <h4>Endereço:</h4>
+                        <h5>R. Goanana, 59 - Vila Esperança - São Paulo - SP</h5>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="footer d-flex justify-content-center align-items-center text-lg-start text-center">
         <div class="row">
             <div class="col">
@@ -340,6 +365,7 @@
 </body>
 <!-- Comentarios -->
 
+<script src="./lib/aos-master/dist/aos.js"></script>
 <script src="./lib/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 <script src="./js/main.js"></script>
 </body>
