style(:art:): styled header and ferramentas

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
     <div class="container" id="ferramentas">
         <div class="ferramentas d-flex justify-content-center align-items-center flex-column">
             <h2 data-aos="fade-down" data-aos-once="true" data-aos-offset="0" data-aos-duration="2000" data-aos-delay="250">Ferramentas</h2>
-            <h4>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                laborum
-                — semper quis lectus nulla at volutpat diam ut venenatis.</h4>
+            <h4>Estou sempre valorizando estruturas com conteúdos simples e designs minimalistas.</h4>
 
             <div class="row  d-flex flex-row justify-content-center align-items-center">
                 <div
@@ -86,30 +84,10 @@
                     </div>
                     <div class="d-none d-md-block ferramentas-copy">
                         <h5>HTML</h5>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur. Excepteur sint occaecat cupidatat.</p>
+                        <p>HTML é uma linguagem baseada em marcação, onde marcamos os elementos para definir quais informações a página vai exibir.</p>
                     </div>
                 </div>
-                <div
-                    class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="250">
-                        <svg width="103" height="102" viewBox="0 0 103 102" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path class="path1"
-                                d="M19.6903 89.25L13.3153 9.5625H89.8153L83.4403 89.25L51.5653 98.8125L19.6903 89.25Z"
-                                stroke="white" stroke-width="3" />
-                            <path class="path2"
-                                d="M62.7216 55.7812H30.8466L29.2528 44.625L54.7528 36.6562H29.2528L27.6591 27.0938H77.0653L75.4716 38.25L54.7528 46.2188H73.8778L70.6903 76.5L51.5653 82.875L32.4403 76.5L30.8466 60.5625H40.4091L42.0028 68.5312L51.5653 71.7188L61.1278 68.5312L62.7216 55.7812Z"
-                                stroke="white" stroke-width="3" />
-                        </svg>
-
-                    </div>
-                    <div class="d-none d-md-block ferramentas-copy">
-                        <h5>CSS</h5>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur. Excepteur sint occaecat cupidatat.</p>
-                    </div>
-                </div>
+              
                 <div
                     class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
                     <div class="ferramentas-image  d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="500">
@@ -125,10 +103,28 @@
                     </div>
                     <div class="d-none d-md-block ferramentas-copy">
                         <h5>Bootstrap</h5>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur. Excepteur sint occaecat cupidatat.</p>
+                        <p>Bootstrap é um framework para desenvolvimento de componentes de interface sites, melhorando a experiência do usuário em um site amigável e responsivo.</p>
                     </div>
                 </div>
+                <div
+                class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
+                <div class="ferramentas-image d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="250">
+                    <svg width="103" height="102" viewBox="0 0 103 102" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path class="path1"
+                            d="M19.6903 89.25L13.3153 9.5625H89.8153L83.4403 89.25L51.5653 98.8125L19.6903 89.25Z"
+                            stroke="white" stroke-width="3" />
+                        <path class="path2"
+                            d="M62.7216 55.7812H30.8466L29.2528 44.625L54.7528 36.6562H29.2528L27.6591 27.0938H77.0653L75.4716 38.25L54.7528 46.2188H73.8778L70.6903 76.5L51.5653 82.875L32.4403 76.5L30.8466 60.5625H40.4091L42.0028 68.5312L51.5653 71.7188L61.1278 68.5312L62.7216 55.7812Z"
+                            stroke="white" stroke-width="3" />
+                    </svg>
+
+                </div>
+                <div class="d-none d-md-block ferramentas-copy">
+                    <h5>CSS</h5>
+                    <p>CSS é uma linguagem de folha de estilo composta por "camadas", criado com o propósito de estilizar as páginas HTML.</p>
+                </div>
+            </div>
                 <div
                     class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
                     <div class="ferramentas-image  d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="0">
@@ -147,8 +143,7 @@
                     </div>
                     <div class="d-none d-md-block ferramentas-copy">
                         <h5>JavaScript</h5>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur. Excepteur sint occaecat cupidatat.</p>
+                        <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma. </p>
                     </div>
                 </div>
                 <div
@@ -175,8 +170,7 @@
                     </div>
                     <div class="d-none d-md-block ferramentas-copy">
                         <h5>Figma</h5>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur. Excepteur sint occaecat cupidatat.</p>
+                        <p>Figma é um editor gráfico de vetor e prototipagem de projetos de design baseado principalmente no navegador web, com ferramentas offline adicionais para aplicações desktop para GNU/Linux, macOS e Windows.</p>
                     </div>
                 </div>
                 <div
