style(:art:): fix image ferramentas

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#servicos">Serviços</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contato">Contato</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -46,8 +49,8 @@
 
     <div class="header">
         <div class="container" data-aos-once="true" data-aos="fade-down" data-aos-offset="0" data-aos-duration="2000">
-            <div class="header-text" >
-                <h1>Develop, Design e UI / UX</h1>
+            <div class="header-text">
+                <h1>Develop, Design and UI / UX</h1>
                 <h4>Desenvolvedor e designer de Landing Page de alta performance.</h4>
             </div>
             <div class="header-buttons">
@@ -55,8 +58,9 @@
                 <button class="btn btn-saibaMais">Saiba mais</button>
             </div>
         </div>
-        <div class="d-none header-image d-lg-flex justify-content-center" >
-            <img src="./image/header-1.png" alt="Site Landing page" data-aos-once="true" data-aos="fade-down" data-aos-offset="0" data-aos-duration="2000" data-aos-delay="250">
+        <div class="d-none header-image d-lg-flex justify-content-center">
+            <img src="./image/header-1.png" alt="Site Landing page" data-aos-once="true" data-aos="fade-down"
+                data-aos-offset="0" data-aos-duration="2000" data-aos-delay="250">
         </div>
     </div>
     <!-- Header -->
@@ -64,13 +68,16 @@
     <!-- Ferramentas -->
     <div class="container" id="ferramentas">
         <div class="ferramentas d-flex justify-content-center align-items-center flex-column">
-            <h2 data-aos="fade-down" data-aos-once="true" data-aos-offset="0" data-aos-duration="2000" data-aos-delay="250">Ferramentas</h2>
+            <h2 data-aos="fade-down" data-aos-once="true" data-aos-offset="0" data-aos-duration="2000"
+                data-aos-delay="250">Ferramentas</h2>
             <h4>Estou sempre valorizando estruturas com conteúdos simples e designs minimalistas.</h4>
 
             <div class="row  d-flex flex-row justify-content-center align-items-center">
                 <div
                     class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image  d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="0">
+                    <div class="ferramentas-image  d-flex justify-content-center align-items-center"
+                        data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100" data-aos-duration="2000"
+                        data-aos-delay="0">
                         <svg width="84" height="84" viewBox="0 0 103 102" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path class="path1"
@@ -82,15 +89,18 @@
                         </svg>
 
                     </div>
-                    <div class="d-none d-md-block ferramentas-copy">
+                    <div class="ferramentas-copy">
                         <h5>HTML</h5>
-                        <p>HTML é uma linguagem baseada em marcação, onde marcamos os elementos para definir quais informações a página vai exibir.</p>
+                        <p>HTML é uma linguagem baseada em marcação, onde marcamos os elementos para definir quais
+                            informações a página vai exibir.</p>
                     </div>
                 </div>
-              
+
                 <div
                     class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image  d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="500">
+                    <div class="ferramentas-image  d-flex justify-content-center align-items-center"
+                        data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100" data-aos-duration="2000"
+                        data-aos-delay="500">
                         <svg class="bootstrap-svg" width="89" height="90" viewBox="0 0 89 90" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path class="path1"
@@ -101,33 +111,38 @@
                                 stroke="white" stroke-width="3" />
                         </svg>
                     </div>
-                    <div class="d-none d-md-block ferramentas-copy">
+                    <div class="ferramentas-copy">
                         <h5>Bootstrap</h5>
-                        <p>Bootstrap é um framework para desenvolvimento de componentes de interface sites, melhorando a experiência do usuário em um site amigável e responsivo.</p>
+                        <p>Bootstrap é um framework para desenvolvimento de componentes de interface sites, melhorando a
+                            experiência do usuário em um site amigável e responsivo.</p>
                     </div>
                 </div>
                 <div
-                class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                <div class="ferramentas-image d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="250">
-                    <svg width="103" height="102" viewBox="0 0 103 102" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path class="path1"
-                            d="M19.6903 89.25L13.3153 9.5625H89.8153L83.4403 89.25L51.5653 98.8125L19.6903 89.25Z"
-                            stroke="white" stroke-width="3" />
-                        <path class="path2"
-                            d="M62.7216 55.7812H30.8466L29.2528 44.625L54.7528 36.6562H29.2528L27.6591 27.0938H77.0653L75.4716 38.25L54.7528 46.2188H73.8778L70.6903 76.5L51.5653 82.875L32.4403 76.5L30.8466 60.5625H40.4091L42.0028 68.5312L51.5653 71.7188L61.1278 68.5312L62.7216 55.7812Z"
-                            stroke="white" stroke-width="3" />
-                    </svg>
+                    class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
+                    <div class="ferramentas-image d-flex justify-content-center align-items-center" data-aos-once="true"
+                        data-aos="zoom-out-down" data-aos-offset="100" data-aos-duration="2000" data-aos-delay="250">
+                        <svg width="103" height="102" viewBox="0 0 103 102" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path class="path1"
+                                d="M19.6903 89.25L13.3153 9.5625H89.8153L83.4403 89.25L51.5653 98.8125L19.6903 89.25Z"
+                                stroke="white" stroke-width="3" />
+                            <path class="path2"
+                                d="M62.7216 55.7812H30.8466L29.2528 44.625L54.7528 36.6562H29.2528L27.6591 27.0938H77.0653L75.4716 38.25L54.7528 46.2188H73.8778L70.6903 76.5L51.5653 82.875L32.4403 76.5L30.8466 60.5625H40.4091L42.0028 68.5312L51.5653 71.7188L61.1278 68.5312L62.7216 55.7812Z"
+                                stroke="white" stroke-width="3" />
+                        </svg>
 
+                    </div>
+                    <div class="ferramentas-copy">
+                        <h5>CSS</h5>
+                        <p>CSS é uma linguagem de folha de estilo composta por "camadas", criado com o propósito de
+                            estilizar as páginas HTML.</p>
+                    </div>
                 </div>
-                <div class="d-none d-md-block ferramentas-copy">
-                    <h5>CSS</h5>
-                    <p>CSS é uma linguagem de folha de estilo composta por "camadas", criado com o propósito de estilizar as páginas HTML.</p>
-                </div>
-            </div>
                 <div
                     class="cards-ferramentas col-lg-3 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image  d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="0">
+                    <div class="ferramentas-image  d-flex justify-content-center align-items-center"
+                        data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100" data-aos-duration="2000"
+                        data-aos-delay="0">
                         <svg width="103" height="102" viewBox="0 0 103 102" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <rect class="path1" x="7.94031" y="7.375" width="87.25" height="87.25" stroke="white"
@@ -141,14 +156,16 @@
                         </svg>
 
                     </div>
-                    <div class="d-none d-md-block ferramentas-copy">
+                    <div class="ferramentas-copy">
                         <h5>JavaScript</h5>
-                        <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma. </p>
+                        <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível
+                            com tipagem dinâmica fraca e multiparadigma. </p>
                     </div>
                 </div>
                 <div
                     class="cards-ferramentas col-lg-12 col-xs-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="250">
+                    <div class="ferramentas-image d-flex justify-content-center align-items-center" data-aos-once="true"
+                        data-aos="zoom-out-down" data-aos-offset="100" data-aos-duration="2000" data-aos-delay="250">
                         <svg width="52" height="78" viewBox="0 0 52 78" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path class="path1"
                                 d="M26.5653 39C26.5653 32.5107 31.826 27.25 38.3153 27.25C44.8047 27.25 50.0653 32.5107 50.0653 39C50.0653 45.4893 44.8047 50.75 38.3153 50.75C31.826 50.75 26.5653 45.4893 26.5653 39Z"
@@ -168,14 +185,18 @@
                         </svg>
 
                     </div>
-                    <div class="d-none d-md-block ferramentas-copy">
+                    <div class="ferramentas-copy">
                         <h5>Figma</h5>
-                        <p>Figma é um editor gráfico de vetor e prototipagem de projetos de design baseado principalmente no navegador web, com ferramentas offline adicionais para aplicações desktop para GNU/Linux, macOS e Windows.</p>
+                        <p>Figma é um editor gráfico de vetor e prototipagem de projetos de design baseado
+                            principalmente no navegador web, com ferramentas offline adicionais para aplicações desktop
+                            para GNU/Linux, macOS e Windows.</p>
                     </div>
                 </div>
                 <div
                     class="cards-ferramentas col-lg-3 col-md-6 d-flex flex-column justify-content-start align-items-center">
-                    <div class="ferramentas-image  d-flex justify-content-center align-items-center" data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100"  data-aos-duration="2000" data-aos-delay="500">
+                    <div class="ferramentas-image  d-flex justify-content-center align-items-center"
+                        data-aos-once="true" data-aos="zoom-out-down" data-aos-offset="100" data-aos-duration="2000"
+                        data-aos-delay="500">
                         <svg width="103" height="102" viewBox="0 0 103 102" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path class="path1"
@@ -187,7 +208,7 @@
                         </svg>
 
                     </div>
-                    <div class="d-none d-md-block ferramentas-copy">
+                    <div class="ferramentas-copy">
                         <h5>Photoshop</h5>
                         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                             pariatur. Excepteur sint occaecat cupidatat.</p>
@@ -283,10 +304,11 @@
 
     <!-- Comentarios -->
     <div class="comentarios">
-        <div class="grid-card">
+        <div class="grid-card">            
             <div class="row d-flex flex-row justify-content-center">
-                <div
-                    class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6" data-aos-once="true" data-aos="flip-left" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="0">
+                <div class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6"
+                    data-aos-once="true" data-aos="flip-left" data-aos-offset="200" data-aos-duration="2000"
+                    data-aos-delay="0">
                     <img src="./image/perso1.png" alt="">
                     <p class="comentario-text-copy">— Open PRO lets me quickly get the insights I care about so that I
                         can focus on my
@@ -297,8 +319,9 @@
                     <hr>
                     <p class="name">Rafaella Carmo <span>Facebook</span></p>
                 </div>
-                <div
-                    class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6" data-aos-once="true" data-aos="flip-up" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="100">
+                <div class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6"
+                    data-aos-once="true" data-aos="flip-up" data-aos-offset="200" data-aos-duration="2000"
+                    data-aos-delay="100">
                     <img src="./image/perso1.png" alt="">
                     <p class="comentario-text-copy">— Open PRO lets me quickly get the insights I care about so that I
                         can focus on my
@@ -309,8 +332,9 @@
                     <hr>
                     <p class="name">Rafaella Carmo <span>Instagram</span></p>
                 </div>
-                <div
-                    class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6" data-aos-once="true" data-aos="flip-right" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="0"> 
+                <div class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6"
+                    data-aos-once="true" data-aos="flip-right" data-aos-offset="200" data-aos-duration="2000"
+                    data-aos-delay="0">
                     <img src="./image/perso2.png" alt="">
                     <p class="comentario-text-copy">— Open PRO lets me quickly get the insights I care about so that I
                         can focus on my
@@ -326,7 +350,7 @@
 
     </div>
 
-    <div class="contato">
+    <div class="contato" id="contato">
         <div class="container">
             <h2>Contato</h2>
             <div class="contato-content">
@@ -335,9 +359,10 @@
                         <h4>Telefone:</h4>
                         <h5 class="mb-3">(11)98692-7887</h5>
                         <h3>Faça um orçamento</h4>
-                        <button class="btn btn-contato"><a href="" style="color: #fff; text-decoration: none; font-weight: 600;">WhatsApp</a></button>
+                            <button class="btn btn-contato"><a href=""
+                                    style="color: #fff; text-decoration: none; font-weight: 600;">WhatsApp</a></button>
                     </div>
-                    <div class="col-6 ">                       
+                    <div class="col-6 ">
                         <h4>Atendimento:</h4>
                         <h5 class="mb-5">Segunda à Sexta 9h às 18h</h5>
                         <h4>Endereço:</h4>
