style(:lipstick:): removing the comentarios

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <!-- Serviços -->
 
     <!-- Comentarios -->
-    <div class="comentarios">
+    <!-- <div class="comentarios">
         <div class="grid-card">            
             <div class="row d-flex flex-row justify-content-center">
                 <div class="d-flex flex-column justify-content-center align-items-center cards col-lg-4 col-md-6 col-sm-6"
@@ -348,7 +348,7 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
 
     <div class="contato" id="contato">
         <div class="container">
